--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Cormorant:wght@700&display=swap');
 body {
-    font-size: 12pt;
+    font-size: 14pt;
+    font-family: "Times New Roman";
 }
 
 p {
@@ -11,10 +12,12 @@ h1 {
     font-family: 'Agbalumo';
     font-size: 36pt;
 }
-main, header, footer, nav ul {
-    max-width: 40rem;
+
+/* main, header, footer, nav ul {
+    max-width: 70rem;
     margin: 0 auto 0 auto;
-}
+} */
+
 main {
     background-color: bisque;
 }
@@ -27,18 +30,26 @@ main {
 } */
 
 header {
-    background-image: url("../img/polacks.jpg");
-    background-size: cover;
+    display: block;
+    margin: 2vw;
+    height: 390px;
     overflow: hidden;
+
+}
+
+header img {
     width: 100%;
-    height: 200px;
-    opacity: 0.5;
+    height: auto;
+    opacity: 0.7;
 }
 
 header h1 {
+    position: absolute;
     width:40rem;
     margin: 0 auto;
     text-align: center;
+    margin-top: -1;
+    color: white;
 }
 
 nav ul {
@@ -61,4 +72,34 @@ nav li {
 .Master {
     color: green;
     font-weight: bold;
+}
+
+.allergen {
+    font-weight: bold;
+}
+
+#burgerinformation {
+    color: white;
+    background-color: black;
+    
+}
+
+button:hover, input[type="radio"] {
+    cursor: pointer;
+}
+
+.burgarblock {
+    margin: 10px;
+}
+
+
+
+button {
+    margin: 2vw;
+}
+
+section {
+    padding: 2vw;
+    margin: 2vw;
+    border: 4px dotted white;
 }
